# sakura

./: .gitignore  CMakeLists.txt  CMakeSettings.json  appveyor.yml  appveyor_env.py  azure-pipelines.yml  build-all.bat  build-by-cmake_with_ninja.bat  build-sln.bat  build-sonar-qube-finish.bat  build-sonar-qube-start.bat  ci-build.md  run-cppcheck.bat  run-doxygen.bat  sakura.sln  zipArtifacts.bat
sakura_core/: CAutoReloadAgent.cpp  CAutoReloadAgent.h  CAutoSaveAgent.cpp  CAutoSaveAgent.h  CBackupAgent.cpp  CBackupAgent.h  CCodeChecker.cpp  CCodeChecker.h  CDataProfile.cpp  CDataProfile.h  CDicMgr.cpp  CDicMgr.h  CEditApp.cpp  CEditApp.h  CEol.cpp  CEol.h  CFileExt.cpp  CFileExt.h  CGrepAgent.cpp  CGrepAgent.h  CGrepEnumFileBase.h  CGrepEnumFiles.h  CGrepEnumFilterFiles.h  CGrepEnumFilterFolders.h  CGrepEnumFolders.h  CGrepEnumKeys.h  CHokanMgr.cpp  CHokanMgr.h  CKeyWordSetMgr.cpp  CKeyWordSetMgr.h  CLoadAgent.cpp  CLoadAgent.h  CMakeLists.txt  CMarkMgr.cpp  CMarkMgr.h  COpe.cpp  COpe.h  COpeBlk.cpp  COpeBlk.h  COpeBuf.cpp  (+27 more)
sakura_core/_main/: CAppMode.cpp  CAppMode.h  CCommandLine.cpp  CCommandLine.h  CControlProcess.cpp  CControlProcess.h  CControlTray.cpp  CControlTray.h  CMutex.h  CNormalProcess.cpp  CNormalProcess.h  CProcess.cpp  CProcess.h  CProcessFactory.cpp  CProcessFactory.h  WinMain.cpp  global.cpp  global.h
sakura_core/_os/: CClipboard.cpp  CClipboard.h  CDropTarget.cpp  CDropTarget.h  COsVersionInfo.cpp  COsVersionInfo.h  OleTypes.h
sakura_core/apiwrap/: CommonControl.h  StdApi.cpp  StdApi.h  StdControl.cpp  StdControl.h
sakura_core/basis/: CLaxInteger.cpp  CLaxInteger.h  CMyPoint.cpp  CMyPoint.h  CMyRect.cpp  CMyRect.h  CMySize.cpp  CMySize.h  CMyString.cpp  CMyString.h  CStrictInteger.cpp  CStrictInteger.h  CStrictPoint.cpp  CStrictPoint.h  CStrictRange.cpp  CStrictRange.h  CStrictRect.cpp  CStrictRect.h  SakuraBasis.cpp  SakuraBasis.h  primitive.h
sakura_core/charset/: CCesu8.cpp  CCesu8.h  CCodeBase.cpp  CCodeBase.h  CCodeFactory.cpp  CCodeFactory.h  CCodeMediator.cpp  CCodeMediator.h  CCodePage.cpp  CCodePage.h  CESI.cpp  CESI.h  CEuc.cpp  CEuc.h  CJis.cpp  CJis.h  CLatin1.cpp  CLatin1.h  CShiftJis.cpp  CShiftJis.h  CUnicode.cpp  CUnicode.h  CUnicodeBe.cpp  CUnicodeBe.h  CUtf7.cpp  CUtf7.h  CUtf8.cpp  CUtf8.h  CharPointer.h  charcode.cpp  charcode.h  charset.cpp  charset.h  codechecker.cpp  codechecker.h  codeutil.cpp  codeutil.h
sakura_core/cmd/: CViewCommander.cpp  CViewCommander.h  CViewCommander_Bookmark.cpp  CViewCommander_Clipboard.cpp  CViewCommander_Convert.cpp  CViewCommander_Cursor.cpp  CViewCommander_CustMenu.cpp  CViewCommander_Diff.cpp  CViewCommander_Edit.cpp  CViewCommander_Edit_advanced.cpp  CViewCommander_Edit_word_line.cpp  CViewCommander_File.cpp  CViewCommander_Grep.cpp  CViewCommander_Insert.cpp  CViewCommander_Macro.cpp  CViewCommander_ModeChange.cpp  CViewCommander_Outline.cpp  CViewCommander_Search.cpp  CViewCommander_Select.cpp  CViewCommander_Settings.cpp  CViewCommander_Support.cpp  CViewCommander_TagJump.cpp  CViewCommander_Window.cpp  CViewCommander_inline.h
sakura_core/config/: app_constants.h  build_config.h  maxdata.h  system_constants.h
sakura_core/convert/: CConvert.cpp  CConvert.h  CConvert_HaneisuToZeneisu.h  CConvert_HankataToZenhira.cpp  CConvert_HankataToZenhira.h  CConvert_HankataToZenkata.cpp  CConvert_HankataToZenkata.h  CConvert_SpaceToTab.cpp  CConvert_SpaceToTab.h  CConvert_TabToSpace.cpp  CConvert_TabToSpace.h  CConvert_ToHankaku.cpp  CConvert_ToHankaku.h  CConvert_ToLower.cpp  CConvert_ToLower.h  CConvert_ToUpper.cpp  CConvert_ToUpper.h  CConvert_ToZenhira.cpp  CConvert_ToZenhira.h  CConvert_ToZenkata.cpp  CConvert_ToZenkata.h  CConvert_Trim.cpp  CConvert_Trim.h  CConvert_ZeneisuToHaneisu.h  CConvert_ZenkataToHankata.cpp  CConvert_ZenkataToHankata.h  CDecode.h  CDecode_Base64Decode.cpp  CDecode_Base64Decode.h  CDecode_UuDecode.cpp  CDecode_UuDecode.h  convert_util.cpp  convert_util2.cpp  convert_util2.h
sakura_core/debug/: CRunningTimer.cpp  CRunningTimer.h  Debug1.cpp  Debug1.h  Debug2.cpp  Debug2.h  Debug3.cpp
sakura_core/dlg/: CDialog.cpp  CDialog.h  CDlgAbout.cpp  CDlgAbout.h  CDlgCancel.cpp  CDlgCancel.h  CDlgCompare.cpp  CDlgCompare.h  CDlgCtrlCode.cpp  CDlgCtrlCode.h  CDlgDiff.cpp  CDlgDiff.h  CDlgExec.cpp  CDlgExec.h  CDlgFavorite.cpp  CDlgFavorite.h  CDlgFileUpdateQuery.cpp  CDlgFileUpdateQuery.h  CDlgFind.cpp  CDlgFind.h  CDlgGrep.cpp  CDlgGrep.h  CDlgGrepReplace.cpp  CDlgGrepReplace.h  CDlgInput1.cpp  CDlgInput1.h  CDlgJump.cpp  CDlgJump.h  CDlgOpenFile.cpp  CDlgOpenFile.h  CDlgOpenFile_CommonFileDialog.cpp  CDlgOpenFile_CommonItemDialog.cpp  CDlgPluginOption.cpp  CDlgPluginOption.h  CDlgPrintSetting.cpp  CDlgPrintSetting.h  CDlgProfileMgr.cpp  CDlgProfileMgr.h  CDlgProperty.cpp  CDlgProperty.h  (+12 more)
sakura_core/doc/: CBlockComment.cpp  CBlockComment.h  CDocEditor.cpp  CDocEditor.h  CDocFile.h  CDocFileOperation.cpp  CDocFileOperation.h  CDocListener.cpp  CDocListener.h  CDocLocker.cpp  CDocLocker.h  CDocOutline.cpp  CDocOutline.h  CDocReader.cpp  CDocReader.h  CDocType.cpp  CDocType.h  CDocTypeSetting.cpp  CDocTypeSetting.h  CDocVisitor.cpp  CDocVisitor.h  CEditDoc.cpp  CEditDoc.h  CLineComment.cpp  CLineComment.h
sakura_core/docplus/: CBookmarkManager.cpp  CBookmarkManager.h  CDiffManager.cpp  CDiffManager.h  CFuncListManager.cpp  CFuncListManager.h  CModifyManager.cpp  CModifyManager.h
sakura_core/env/: CAppNodeManager.cpp  CAppNodeManager.h  CDocTypeManager.cpp  CDocTypeManager.h  CFileNameManager.cpp  CFileNameManager.h  CFormatManager.cpp  CFormatManager.h  CHelpManager.cpp  CHelpManager.h  CSakuraEnvironment.cpp  CSakuraEnvironment.h  CSearchKeywordManager.cpp  CSearchKeywordManager.h  CShareData.cpp  CShareData.h  CShareData_IO.cpp  CShareData_IO.h  CTagJumpManager.cpp  CTagJumpManager.h  CommonSetting.cpp  CommonSetting.h  DLLSHAREDATA.cpp  (+1 more)
sakura_lang_en_US/: CMakeLists.txt  Makefile  sakura_lang_en_US.vcxproj  sakura_lang_rc.rc2
tests/: CMakeLists.txt  build-project.bat  compiletests.run.cmd  compiletests.targets  create-project.bat  googletest.build.cmd  googletest.targets
(+369 files in other folders)
